--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* Trufel - a fancy app launcher with OIDC integration
+* Trufel - app launcher with OIDC integration
 
 A side project attempt to combine Rust and Svelte to get a minimalistic full-stack architecture with slick UI connecting to axum server. Server side is smart enough to recognize authenticated requests and verify JWT tokens against Keycloak-configured keys.
 
